app/assets/styles.css
:root {
  --pico-primary-inverse: #fff !important;
  --pico-background-color: #333333 !important;
  --pico-color: white !important;
}

body {
  color: var(--pico-color);
}

h1, h2, h3, h4, h5, h6 {
  color: #ffffff !important;
}

.menu-container {
    position: absolute;
    top: 5px;
    right: 15px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    z-index: 100;
}

.hamburger-icon {
    font-size: 1.5rem;
    cursor: pointer;
    color: white;
    padding: 3px;
}

.hamburger {
    width: 25px;
    height: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
    color: white;
}

.hamburger div {
    height: 2px;
    background-color: #ffffff;
}

.dropdown-menu {
    display: none;
    position: absolute;
    top: 35px;
    right: 0;
    border-radius: 5px;
    color: white;
    background-color: #333333;
    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
}

.dropdown-menu .menu-item {
    display: block;
    padding: 8px 15px;
    color: #ffffff;
    text-decoration: none;
    font-size: 0.9rem;
}

.dropdown-menu .menu-item:hover {
    text-decoration: underline;
}

.menu-container.active .dropdown-menu {
    display: block;
}

.profile-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 80px;
    color: white;
}

.profile-name {
    margin-top: 15px;
    margin-bottom: 1px;
    font-size: 1.5rem;
    font-weight: bold;
    color: white !important;
}

.profile-picture-wrapper {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000;
}

.profile-picture {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.social-container {
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-top: 1px;
}

.github-icon, .x-icon, .bluesky-icon, .linkedin-icon {
    font-size: 1.2rem;
    color: white;
    text-decoration: none;
    padding: 6px;
    border: 2px solid transparent;
}

.github-icon:hover, .x-icon:hover, .bluesky-icon:hover, .linkedin-icon:hover {
    border: 2px solid white;
    border-radius: 8px;
}

.about-me-container {
    max-width: 800px;
    margin: 1.5rem auto;
    padding: 2rem;
    background: #2a2a2a;
    border-radius: 10px;
    color: #fffafa !important;
    text-align: left;
    line-height: 1.6;
}

.about-container p {
    margin-bottom: 1.5rem;
    line-height: 1.6;
}

.about-title {
    margin-bottom: 1.5rem;
    color: #fff;
}

.footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: transparent;
    padding: 10px 0;
    margin-bottom: env(safe-area-inset-bottom, 0px);
}

.code-link {
    color: #575757;
    font-size: 0.9rem;
    text-decoration: none;
    position: fixed;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 10;
}

.text-center {
    text-align: center;
}

.d-flex {
    display: flex;
}

.justify-content-center {
    justify-content: center;
}

.align-items-center {
    align-items: center;
}

.projects-title {
    margin-top: 5rem;
}

.empty-container {
    min-height: calc(100vh - 5rem);
    display: flex;
    justify-content: center;
    align-items: center;
}

.empty-text {
    color: #808080;
    font-size: 1.2rem;
    margin: 0;
}

.btn-primary {
    background-color: #333333;
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    position: absolute;
    top: 5rem;
    left: 20px;
    text-decoration: none;
}

.btn-primary:hover {
    text-decoration: underline;
}

.btn-primary::before {
    content: "← ";
    font-size: 1.1em;
}

